tests/fail/negative_skip.stderr
error: invalid digit found in string
 --> tests/fail/negative_skip.rs:9:34
  |
9 |     let _wave = sine_wave!(skip: -10);
  |                                  ^
